# dorfromantische-rs

./: .gitignore  Cargo.toml  Justfile  README.md  main.py  pyproject.toml
dorfromantischer/: chunks.py  game2d.py  game3d.py  quadtree.py  savegame.py  state.py
dorfromantischer/gl/: buffer.py  program.py
other/: data.comp
shaders/: data.comp  fragment.glsl  lighting.comp  lighting.frag  shader.frag
src/: main.rs
